<resources>
    <string name="app_name">News APP</string>

    <string name="lorem">The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period. The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period.The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period.The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period.The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period.The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period.The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period.The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period.The April survey showed that worries about the economy slipping into a recession persisted last month. Economists, including those at the Federal Reserve, expect a recession later in the year as the Fed’s rate hikes take a deeper hold. The share of consumers expecting more jobs to be available fell to 12.5% in April, down from 15.5% in March, while the share who anticipate fewer jobs increased to 21% from 20.5% during the same period.</string>
    <string name="tab_general">General</string>
    <string name="tab_business">Business</string>
    <string name="tab_traveling">Traveling</string>
    <string name="chip_popular">Popular</string>
    <string name="chip_new">New</string>
    <string name="chip_relevant">Relevant</string>
    <string name="chip_language_russian">Русский</string>
    <string name="chip_language_english">English</string>
    <string name="chip_language_deutsch">Deutsch</string>
    <string name="filter_language">Language</string>
    <string name="filter_date">Date</string>
    <string name="filter_calendar">Choose Date</string>
    <string name="error_connection">No internet connection</string>
    <string name="refresh">Refresh</string>

</resources>
